--- a/index.html
+++ b/index.html
@@ -10,12 +10,35 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      .font_poppins {
+        font-family: "Poppins", sans-serif;
+      }
+    </style>
+
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              "bike-primary": "#E76F51",
+            },
+          },
+        },
+      };
+    </script>
   </head>
-  <body>
-    <header>
-      <nav class="container mx-auto">
+  <body class="font_poppins">
+    <header class="container mx-auto">
+      <nav class="py-6">
         <div class="navbar bg-base-100">
-          <div class="navbar-start">
+          <div class="flex-1">
             <div class="dropdown">
               <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                 <svg
@@ -35,7 +58,7 @@
               </div>
               <ul
                 tabindex="0"
-                class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
+                class="menu menu-sm text-base dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
               >
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Shop</a></li>
@@ -43,21 +66,154 @@
                 <li><a href="#">Contact</a></li>
               </ul>
             </div>
-            <a class="btn btn-ghost text-xl">Biker Zone</a>
+            <a class="text-xl font-semibold">Biker Zone</a>
           </div>
           <div class="navbar-center hidden lg:flex">
-            <ul class="menu menu-horizontal px-1">
+            <ul class="menu menu-horizontal text-base px-1">
               <li><a href="#">Home</a></li>
               <li><a href="#">Shop</a></li>
               <li><a href="#">News</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
           </div>
-          <div class="navbar-end">
-            <a class="btn bg-[#E76F51] text-white">Login</a>
+          <div class="">
+            <a class="btn bg-bike-primary px-6 text-white">Login</a>
           </div>
         </div>
       </nav>
+      <!-- banner slider-->
+      <div class="carousel w-full bg-[#E76F511A]">
+        <div id="slide1" class="carousel-item relative w-full">
+          <div
+            class="flex items-center justify-between flex-col-reverse gap-5 w-full p-5 lg:px-32 lg:py-20 lg:flex-row"
+          >
+            <div
+              class="md:w-1/2 flex flex-col items-center justify-center lg:items-start"
+            >
+              <h2
+                class="text-2xl text-center font-bold lg:text-5xl lg:text-left"
+              >
+                Ride-on R15 V4 <br />
+                with Smile
+              </h2>
+              <p
+                class="text-base font-normal text-center py-4 lg:text-left lg:max-w-md"
+              >
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <div class="btn bg-bike-primary text-white">Purchase</div>
+            </div>
+            <div class="px-12 md:w-1/2 md:px-2">
+              <img src="./images/slider/bike1.png" class="w-full" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide4" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide2" class="carousel-item relative w-full">
+          <div
+            class="flex items-center justify-between flex-col-reverse gap-5 w-full p-5 lg:px-32 lg:py-20 lg:flex-row"
+          >
+            <div
+              class="md:w-1/2 flex flex-col items-center justify-center lg:items-start"
+            >
+              <h2
+                class="text-2xl text-center font-bold lg:text-5xl lg:text-left"
+              >
+                Ride-on R15 V4 <br />
+                with Smile
+              </h2>
+              <p
+                class="text-base font-normal text-center py-4 lg:text-left lg:max-w-md"
+              >
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <div class="btn bg-bike-primary text-white">Purchase</div>
+            </div>
+            <div class="px-12 md:w-1/2 md:px-2">
+              <img src="./images/slider/bike2.png" class="w-full" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide1" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide3" class="carousel-item relative w-full">
+          <div
+            class="flex items-center justify-between flex-col-reverse gap-5 w-full p-5 lg:px-32 lg:py-20 lg:flex-row"
+          >
+            <div
+              class="md:w-1/2 flex flex-col items-center justify-center lg:items-start"
+            >
+              <h2
+                class="text-2xl text-center font-bold lg:text-5xl lg:text-left"
+              >
+                Ride-on R15 V4 <br />
+                with Smile
+              </h2>
+              <p
+                class="text-base font-normal text-center py-4 lg:text-left lg:max-w-md"
+              >
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <div class="btn bg-bike-primary text-white">Purchase</div>
+            </div>
+            <div class="px-12 md:w-1/2 md:px-2">
+              <img src="./images/slider/bike3.png" class="w-full" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide2" class="btn btn-circle">❮</a>
+            <a href="#slide4" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <div id="slide4" class="carousel-item relative w-full">
+          <div
+            class="flex items-center justify-between flex-col-reverse gap-5 w-full p-5 lg:px-32 lg:py-20 lg:flex-row"
+          >
+            <div
+              class="md:w-1/2 flex flex-col items-center justify-center lg:items-start"
+            >
+              <h2
+                class="text-2xl text-center font-bold lg:text-5xl lg:text-left"
+              >
+                Ride-on R15 V4 <br />
+                with Smile
+              </h2>
+              <p
+                class="text-base font-normal text-center py-4 lg:text-left lg:max-w-md"
+              >
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <div class="btn bg-bike-primary text-white">Purchase</div>
+            </div>
+            <div class="px-12 md:w-1/2 md:px-2">
+              <img src="./images/slider/bike4.png" class="w-full" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide3" class="btn btn-circle">❮</a>
+            <a href="#slide1" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </div>
     </header>
+    <main class="container mx-auto"></main>
+    <footer></footer>
   </body>
 </html>
