design all the section

--- a/index.html
+++ b/index.html
@@ -96,9 +96,7 @@
                 Ride-on R15 V4 <br />
                 with Smile
               </h2>
-              <p
-                class="text-base font-normal text-center py-4 lg:text-left lg:max-w-md"
-              >
+              <p class="text-base font-normal text-center py-4 lg:text-left">
                 Amet minim mollit non deserunt ullamco est sit aliqua dolor do
                 amet sint. Velit officia consequat duis enim velit mollit.
               </p>
@@ -213,7 +211,375 @@
         </div>
       </div>
     </header>
-    <main class="container mx-auto"></main>
-    <footer></footer>
+    <main class="container mx-auto">
+      <!-- feature bikes section -->
+      <section class="pt-20 px-5">
+        <h3 class="text-center text-2xl font-bold md:text-5xl">
+          Fetured Bikes In This Year
+        </h3>
+        <h5
+          class="text-bike-primary text-center my-4 underline underline-offset-8 font-bold"
+        >
+          Best bike collection
+        </h5>
+        <div class="flex flex-wrap items-center justify-center gap-16 py-16">
+          <img
+            src="./images/others/feature-bike.png"
+            alt="feature-bike"
+            class="max-w-72"
+          />
+          <img
+            src="./images/others/feature-bike.png"
+            alt="feature-bike"
+            class="max-w-72"
+          />
+          <img
+            src="./images/others/feature-bike.png"
+            alt="feature-bike"
+            class="max-w-72"
+          />
+        </div>
+      </section>
+
+      <!-- latest News section -->
+      <section class="py-20 px-5">
+        <h3
+          class="text-center text-3xl font-bold capitalize mb-10 md:mb-20 md:text-5xl"
+        >
+          latest News
+        </h3>
+        <div class="flex items-center justify-center">
+          <div class="grid grid-cols-1 gap-16 md:grid-cols-2 lg:grid-cols-3">
+            <!-- Card 1 -->
+            <div class="card max-w-96 bg-base-100">
+              <figure class="mb-5">
+                <img
+                  src="./images/others/latest1.png"
+                  alt="Shoes"
+                  class="w-full"
+                />
+              </figure>
+              <div class="card-body p-0">
+                <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                <p class="text-sm text-[#6C6C6C] mb-2">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lacus, fermentum amet faucibus sed id nisi lectus at.
+                </p>
+                <div class="card-actions">
+                  <button class="btn text-white bg-bike-primary">
+                    Read More
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!-- Card 2 -->
+            <div class="card max-w-96 bg-base-100">
+              <figure class="mb-5">
+                <img
+                  src="./images/others/latest2.png"
+                  alt="Shoes"
+                  class="w-full"
+                />
+              </figure>
+              <div class="card-body p-0">
+                <h2 class="card-title">Motorcycles & Scooters</h2>
+                <p class="text-sm text-[#6C6C6C] mb-2">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lacus, fermentum amet faucibus sed id nisi lectus at.
+                </p>
+                <div class="card-actions">
+                  <button class="btn text-white bg-bike-primary">
+                    Read More
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!-- Card 3 -->
+            <div class="card max-w-96 bg-base-100">
+              <figure class="mb-5">
+                <img
+                  src="./images/others/latest3.png"
+                  alt="Shoes"
+                  class="w-full"
+                />
+              </figure>
+              <div class="card-body p-0">
+                <h2 class="card-title">2021 Honda CBR500R</h2>
+                <p class="text-sm text-[#6C6C6C] mb-2">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lacus, fermentum amet faucibus sed id nisi lectus at.
+                </p>
+                <div class="card-actions">
+                  <button class="btn text-white bg-bike-primary">
+                    Read More
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--  Clients section -->
+      <section class="py-20 px-5">
+        <h3 class="text-center text-3xl font-bold capitalize mb-10 md:text-5xl">
+          Happy <span class="text-bike-primary">Clients says</span>
+        </h3>
+        <div class="flex items-center justify-center py-10">
+          <div class="grid grid-cols-1 gap-16 md:grid-cols-2 lg:grid-cols-3">
+            <!-- card 1 -->
+            <div class="card w-80 bg-base-100 border">
+              <figure class="px-10 pt-10">
+                <img
+                  src="./images/others/user-1.png"
+                  alt="user"
+                  class="w-36 h-36 rounded-full"
+                />
+              </figure>
+              <div class="card-body items-center text-center">
+                <p class="text-base text-[#6C6C6C] mb-2">
+                  Slate helps you see how many more days you need to work to
+                  reach your financial goal for the month and year.
+                </p>
+                <div
+                  class="card-actions flex flex-col items-center justify-center gap-4"
+                >
+                  <div class="rating">
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                    />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                    />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                    />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                      checked
+                    />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                    />
+                  </div>
+                  <h5 class="text-[#23A6F0] font-bold">Regina Miles</h5>
+                  <p class="font-semibold">Banker</p>
+                </div>
+              </div>
+            </div>
+            <!-- card 2 -->
+            <div class="card w-80 bg-base-100 border">
+              <figure class="px-10 pt-10">
+                <img
+                  src="./images/others/user-2.png"
+                  alt="user"
+                  class="w-36 h-36 rounded-full"
+                />
+              </figure>
+              <div class="card-body items-center text-center">
+                <p class="text-base text-[#6C6C6C] mb-2">
+                  Slate helps you see how many more days you need to work to
+                  reach your financial goal for the month and year.
+                </p>
+                <div
+                  class="card-actions flex flex-col items-center justify-center gap-4"
+                >
+                  <div class="rating">
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                    />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                    />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                    />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                      checked
+                    />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                    />
+                  </div>
+                  <h5 class="text-[#23A6F0] font-bold">Regina Miles</h5>
+                  <p class="font-semibold">Banker</p>
+                </div>
+              </div>
+            </div>
+            <div class="card w-80 bg-base-100 border">
+              <figure class="px-10 pt-10">
+                <img
+                  src="./images/others/user-3.png"
+                  alt="user"
+                  class="w-36 h-36 rounded-full"
+                />
+              </figure>
+              <div class="card-body items-center text-center">
+                <p class="text-base text-[#6C6C6C] mb-2">
+                  Slate helps you see how many more days you need to work to
+                  reach your financial goal for the month and year.
+                </p>
+                <div
+                  class="card-actions flex flex-col items-center justify-center gap-4"
+                >
+                  <div class="rating">
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                    />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                    />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                    />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                      checked
+                    />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                    />
+                  </div>
+                  <h5 class="text-[#23A6F0] font-bold">Regina Miles</h5>
+                  <p class="font-semibold">Banker</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--  faq section -->
+      <section class="pb-20 px-5">
+        <h3 class="text-center text-3xl font-bold capitalize mb-10 md:text-5xl">
+          Frequently
+          <span class="text-bike-primary">Asked Questions</span>
+        </h3>
+        <div
+          class="flex items-center justify-center flex-col gap-10 mt-20 md:flex-row"
+        >
+          <div class="w-full flex items-center justify-center md:w-1/2">
+            <img src="./images/others/faq.png" alt="faq" />
+          </div>
+          <div class="w-full space-y-5 md:w-1/2">
+            <div class="collapse collapse-arrow border rounded-md">
+              <input type="radio" name="my-accordion-2" checked="checked" />
+              <div class="collapse-title text-xl font-medium">
+                What are the most important things I should know about riding a
+                bike?
+              </div>
+              <div class="collapse-content">
+                <p class="text-[#7E848C] text-sm">
+                  Safety First! Always obey the rules of the road. Obey all
+                  traffic signals, signs, and laws. Get in the mindset of
+                  “driving” your bike—not just “riding” your bike. This will
+                  help you be a more focused and legally compliant bike rider.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow border rounded-md">
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title text-xl font-medium">
+                How can I tell if my helmet is old and I need a new one?
+              </div>
+              <div class="collapse-content">
+                <p class="text-[#7E848C] text-sm">
+                  Safety First! Always obey the rules of the road. Obey all
+                  traffic signals, signs, and laws. Get in the mindset of
+                  “driving” your bike—not just “riding” your bike. This will
+                  help you be a more focused and legally compliant bike rider.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow border rounded-md">
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title text-xl font-medium">
+                My bike has been in storage is it safe to ride?
+              </div>
+              <div class="collapse-content">
+                <p class="text-[#7E848C] text-sm">
+                  Safety First! Always obey the rules of the road. Obey all
+                  traffic signals, signs, and laws. Get in the mindset of
+                  “driving” your bike—not just “riding” your bike. This will
+                  help you be a more focused and legally compliant bike rider.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow border rounded-md">
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title text-xl font-medium">
+                What rules should I follow when riding my bike?
+              </div>
+              <div class="collapse-content">
+                <p class="text-[#7E848C] text-sm">
+                  Safety First! Always obey the rules of the road. Obey all
+                  traffic signals, signs, and laws. Get in the mindset of
+                  “driving” your bike—not just “riding” your bike. This will
+                  help you be a more focused and legally compliant bike rider.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer items-center p-16 bg-[#0B0D17] text-neutral-content">
+      <div class="container mx-auto flex flex-col justify-between md:flex-row">
+        <div class="flex-1">
+          <h3 class="space-x-5">
+            <span>Download Now</span> <span>License</span>
+          </h3>
+          <ul class="flex items-center flex-wrap gap-5 my-5">
+            <li>About</li>
+            <li>Features</li>
+            <li>Pricing</li>
+            <li>Careers</li>
+            <li>Help</li>
+            <li>Privacy Policy</li>
+          </ul>
+          <span>© 2020 bike. All rights reserved</span>
+        </div>
+        <div class="flex flex-col gap-8">
+          <h4>Get the App</h4>
+          <img src="./images/others/ios.png" alt="ios" class="max-w-32" />
+          <img
+            src="./images/others/android.png"
+            alt="android"
+            class="max-w-32"
+          />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
